@@ -1,4 +1,5 @@
 TODO / Feature list
++ random link or link of the day
 + view table really still needed?
 + stats cleanup. Management functions should be standalone
 + theme support
