@@ -102,6 +102,8 @@ view.num.links = "# of links"
 view.edit.tags = "Edit tags"
 view.edit.categories = "Edit categories"
 view.links = "Links"
+view.random.headline = "Surprise"
+view.random.link = "Link"
 
 stats.view.all = "View all"
 stats.moderation = "Moderation"
@@ -123,6 +125,7 @@ stats.import.xml.import = "Import"
 view.nav.all.tags = "Tags"
 view.nav.all.categories = "Categories"
 view.nav.back.home = "back home"
+view.nav.random = "Random link"
 
 stats.storage.clean.fail = "Something went wrong while storage cleaning"
 stats.import.missing.file = "Please provide a import file"
