@@ -102,6 +102,8 @@ view.num.links = "# der Links"
 view.edit.tags = "Tags bearbeiten"
 view.edit.categories = "Kategorien bearbeiten"
 view.links = "Links"
+view.random.headline = "Überraschung"
+view.random.link = "Link"
 
 stats.view.all = "Alle"
 stats.moderation = "Moderation"
@@ -123,6 +125,7 @@ stats.import.xml.import = "Import"
 view.nav.all.tags = "Tags"
 view.nav.all.categories = "Kategorien"
 view.nav.back.home = "zurück nach Hause"
+view.nav.random = "Zufallslink"
 
 stats.storage.clean.fail = "Ein Fehler bei der Speicherplatzlöschung trat auf"
 stats.import.missing.file = "Bitte eine Importdatei angeben"
