@@ -4,6 +4,7 @@ version 2.7 - Sacred Grove
 	+ Adapted some new PHP code formatting
 	+ Fixed some translations
 	+ Updated bulma css
+	+ Added random link page
 
 version 2.6 - Hypostyle (2021-03-21)
 
